--- a/style.css
+++ b/style.css
@@ -3,3 +3,14 @@
   padding: 0 0 0 0;
   box-sizing: border-box;
 }
+
+body {
+  background: white;
+  width: 100%;
+  height: 100dvh;
+  padding: 0 20px;
+}
+
+.rte{
+  width: 100%;
+}
